Revision history for HTML::StateTable

          - Page and page size now table roles
          - Charts can locates left and right too
          - Tidies up naming of serialised keys
          - Charts refresh only when their state changes
          - Adds POD for column, row and cell classes
          - Updates README.md
          - Adds POD for state table class
          - Updates prereqs and meta data
          - Adds chartable table role. Uses HighCharts.js
          - Configurable dialog clear/resets/saves row order
          - Added sequence number to JS files
          - Completes reorderable
          - Adds reorderable role
          - Completes configurable updates of table and preferences
          - Display tags appended to cell content
          - Adds force limit and tag table roles
          - Adds Active and HighlightRow row traits
          - Adds checkbox column trait. Form role. Check all role
          - Adds filterable table role
          - Adds configurable table role
          - Poor mans HTML::Tiny in utils JS
          - Adds downloadable table role
          - Adds searchable table role
          - Adds number trait
          - Dropped Table renderer
          - Handles paging and sorting
          - Added date column trait and working empty div js rendered tables
          - Added method to dereference compound column references
          - Wrote Table renderer under protest
          - Serialises empty div. Needs resultset

0.1.1     2021-04-30 13:46:51
          - Added project files to master branch
